<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_color">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/mLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:text="@string/mLaunch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/mBtnLoginLaunch"
        android:layout_margin="20dp"
        android:text="@string/mBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/mBtnSignupLaunch"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:text="@string/mBtnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>