<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"

    android:background="@drawable/background_color">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/mBtnLogin"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/mLabelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mLabelEmail" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/mLabelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mLabelEnterPassword"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/mBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/mBtnLogin" />

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/mAddAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mAddAcount"
        android:textColor="@color/white" />
</LinearLayout>